# iroha

./: .clang-tidy  CMakeLists.txt
.circleci/: config.yml
cmake/: analysis.cmake  ccache.cmake  dependencies.cmake  functions.cmake  hunter-binary-cache.cmake  hunter-config.cmake  setup.cmake
cmake/Modules/: Finded25519.cmake
cmake/analysis/: clang-tidy.cmake  gcovr.cmake
cmake/config/: all.cmake  coverage.cmake  debug.cmake  release.cmake
docker/develop/: Dockerfile
example/Android/: android-build.sh
example/java/: .gitignore
example/java/Android/: android-build.sh  cmake.patch
iroha-cli/: CMakeLists.txt  client.cpp  client.hpp
iroha-cli/interactive/: interactive_common_cli.hpp
irohad/ametsuchi/: mutable_storage.hpp  storage.hpp
irohad/ametsuchi/impl/: mutable_storage_impl.cpp  mutable_storage_impl.hpp  postgres_block_index.cpp  storage_impl.cpp
irohad/consensus/yac/impl/: yac_gate_impl.cpp
irohad/model/: CMakeLists.txt  objects_fwd.hpp
irohad/model/commands/: commands_fwd.hpp
irohad/model/compatibility/: CMakeLists.txt  block.cpp  keypair.cpp  make_old_model.cpp  make_old_model.hpp  transaction.cpp
irohad/model/converters/: CMakeLists.txt
irohad/model/execution/impl/: command_executor.cpp
irohad/model/queries/: queries_fwd.hpp
irohad/model/queries/responses/: responses_fwd.hpp
irohad/network/impl/: block_loader_impl.cpp  peer_communication_service_impl.cpp
irohad/synchronizer/impl/: synchronizer_impl.cpp
irohad/torii/: CMakeLists.txt  command_client.cpp  command_client.hpp  command_client_impl.cpp  command_client_impl.hpp  query_client.cpp  query_client.hpp  query_client_impl.cpp  query_client_impl.hpp  query_service.hpp
irohad/torii/impl/: command_service.cpp  query_service.cpp
irohad/torii/processor/impl/: transaction_processor_impl.cpp
irohad/validation/impl/: chain_validator_impl.cpp  stateful_validator_impl.cpp
schema/: queries.proto
shared_model/backend/protobuf/: block.hpp  objects_fwd.hpp  proposal.hpp  transaction.hpp
shared_model/backend/protobuf/commands/: commands_fwd.hpp
shared_model/backend/protobuf/common_objects/: common_objects_fwd.hpp
shared_model/backend/protobuf/queries/: proto_query.hpp  queries_fwd.hpp
shared_model/backend/protobuf/query_responses/: query_responses_fwd.hpp
shared_model/builders/protobuf/: transport_builder.hpp  unsigned_proto.hpp
shared_model/builders/protobuf/builder_templates/: block_template.hpp  proposal_template.hpp  query_template.hpp  transaction_template.hpp
shared_model/cryptography/: blob.hpp  keypair.hpp  objects_fwd.hpp  private_key.hpp  public_key.hpp
shared_model/cryptography/model_impl/: blob.cpp
shared_model/interfaces/: objects_fwd.hpp  transaction.hpp
shared_model/interfaces/base/: primitive.hpp  signable.hpp  signable_hash.hpp
shared_model/interfaces/commands/: commands_fwd.hpp
shared_model/interfaces/common_objects/: common_objects_fwd.hpp  signature.hpp  types.hpp
shared_model/interfaces/iroha_internal/: block.hpp  proposal.hpp
shared_model/interfaces/queries/: queries_fwd.hpp
shared_model/interfaces/query_responses/: query_responses_fwd.hpp
shared_model/utils/: polymorphic_wrapper.hpp  visitor_apply_for_all.hpp
shared_model/validation/: field_validation.hpp  transaction_validator.hpp
shared_model/validators/: CMakeLists.txt  answer.hpp  block_validator.hpp  container_validator.hpp  default_validator.hpp  field_validator.cpp  internal_validator.cpp  internal_validator.hpp  proposal_validator.hpp  transaction_validator.hpp
test/: CMakeLists.txt
test/framework/integration_framework/: integration_test_framework.hpp  iroha_instance.hpp
test/integration/: CMakeLists.txt  client_test.cpp
test/integration/acceptance/: CMakeLists.txt  tx_acceptance_test.cpp
test/integration/pipeline/: multisig_tx_pipeline_test.cpp  transfer_asset_inter_domain_test.cpp  tx_pipeline_integration_test.cpp  tx_pipeline_integration_test_fixture.cpp
test/module/irohad/: CMakeLists.txt
test/module/irohad/ametsuchi/: CMakeLists.txt  ametsuchi_mocks.hpp  ametsuchi_test.cpp  kv_storage_test.cpp
test/module/irohad/consensus/yac/: peer_orderer_test.cpp  yac_gate_test.cpp  yac_mocks.hpp
test/module/irohad/network/: CMakeLists.txt  network_mocks.hpp
test/module/irohad/ordering/: ordering_gate_service_test.cpp  ordering_service_test.cpp
test/module/irohad/simulator/: CMakeLists.txt  simulator_test.cpp
test/module/irohad/synchronizer/: synchronizer_test.cpp
test/module/irohad/torii/: torii_queries_test.cpp  torii_service_test.cpp
test/module/irohad/validation/: chain_validation_test.cpp
test/module/shared_model/: CMakeLists.txt
test/module/shared_model/backend_proto/: CMakeLists.txt  shared_proto_queries_test.cpp  shared_proto_transaction_test.cpp
test/module/shared_model/builders/protobuf/: test_block_builder.hpp  test_transaction_builder.hpp  transport_builder_test.cpp
test/module/shared_model/validation/: CMakeLists.txt  composable_transaction_validator_test.cpp
test/module/shared_model/validators/: CMakeLists.txt  internal_validator_test.cpp  query_validator_test.cpp  transaction_validator_test.cpp  validators.hpp
